feat: Better Github pat detection

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,35 +1,35 @@
-Package: hexFinder
 Type: Package
+Package: hexFinder
 Title: Find Hex Logos for CRAN Packages
-Version: 0.8.3
-Authors@R: person("Pedro", "Silva", email = "pedrocoutinhosilva@gmail.com",
-  role = c("aut", "cre"))
+Version: 0.8.4
+Authors@R:
+    person("Pedro", "Silva", , "pedrocoutinhosilva@gmail.com", role = c("aut", "cre"))
 Description: Scavenge the web for possible hex logos for CRAN packages.
 License: MIT + file LICENSE
 URL: https://pedrocsilva.com
-Encoding: UTF-8
-LazyData: true
 Depends:
-  R (>= 4.3.0)
+    R (>= 4.3.0)
 Imports:
-  ggplot2,
-  hexSticker,
-  tools,
-  utils,
-  methods,
-  magick,
-  glue,
-  jsonlite,
-  pkgsearch,
-  purrr,
-  stringr,
-  httr2
-RoxygenNote: 7.3.1
+    ggplot2,
+    glue,
+    hexSticker,
+    httr2,
+    jsonlite,
+    magick,
+    methods,
+    pkgsearch,
+    purrr,
+    stringr,
+    tools,
+    utils
 Suggests:
-    httptest2,
-    testthat (>= 3.0.0),
     covr,
+    httptest2,
+    knitr,
     rmarkdown,
     svglite,
-    knitr
+    testthat (>= 3.0.0)
 Config/testthat/edition: 3
+Encoding: UTF-8
+LazyData: true
+RoxygenNote: 7.3.2
