Better SVG parsing

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,6 +27,7 @@ Suggests:
     httptest2,
     knitr,
     rmarkdown,
+    rsvg,
     svglite,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
